[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deunicode = "1.3.3"
once_cell = "1.17.1"
reqwest = { version = "0.11.18", features = [ "blocking" ] }
select = { version = "0.6.0" }
tokio = { version = "1.28.1", features = [ "rt-multi-thread", "macros" ] }
url = "2.3.1"
